--- a/ansible/playbooks/docker.yml
+++ b/ansible/playbooks/docker.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: docker_hosts
+- name: Install Docker
+  hosts: all
   become: yes
   roles:
-    - docker
+    - geerlingguy.docker  # ou le rôle que tu souhaites utiliser
