--- a/ansible/inventory/dev.ini
+++ b/ansible/inventory/dev.ini
@@ -1,11 +1,10 @@
-[docker_hosts]
-node-app ansible_host=192.168.1.10 ansible_user=ubuntu
-
-[kubernetes_hosts]
-k8s-master ansible_host=192.168.1.11 ansible_user=ubuntu
-
-[elk_hosts]
-elk-server ansible_host=192.168.1.12 ansible_user=ubuntu
-
-[jenkins_hosts]
-jenkins-server ansible_host=192.168.1.13 ansible_user=ubuntu
+# node-app ansible_host=192.168.3.10 ansible_user=ubuntu
+[all]
+[node-app]
+192.168.3.10 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+192.168.3.11 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
+192.168.3.12 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
+192.168.3.13 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
+# k8s-master ansible_host=192.168.3.11 ansible_user=ubuntu
+# elk-server ansible_host=192.168.3.12 ansible_user=ubuntu
+# jenkins-server ansible_host=192.168.3.13 ansible_user=ubuntu
