--- a/ansible/inventory/prod.ini
+++ b/ansible/inventory/prod.ini
@@ -9,3 +9,5 @@ elk-server ansible_host=192.168.3.12 ansible_user=ubuntu
 
 [jenkins_hosts]
 jenkins-server ansible_host=192.168.3.13 ansible_user=ubuntu
+
+# mon fichier prod.ini
