--- a/ansible/inventory/staging.ini
+++ b/ansible/inventory/staging.ini
@@ -9,3 +9,5 @@ elk-server ansible_host=192.168.2.12 ansible_user=ubuntu
 
 [jenkins_hosts]
 jenkins-server ansible_host=192.168.2.13 ansible_user=ubuntu
+
+# mon fichier staging.ini
